# wx-qrcode-svg

./: Cargo.toml  README.md  adaptation.md
encoding/: encoding_utf8.js
src/: lib.rs
test-app/: app.json  project.config.json  sitemap.json
test-app/pages/index/: index.js  index.wxml
test-app/utils/: qrcode_svg.js  qrcode_svg.wasm
